[package]

name = "tmux_min_attacher"
version = "1.0.0"
authors = ["Andreas Fuchs <asf@boinkor.net>"]
license = "MIT"
description = "A tool that re-attaches you to the lowest detached TMUX session number"
repository = "https://github.com/antifuchs/tmux_min_attacher"

keywords = ["tmux", "terminal"]

[dependencies]
#c_str = "^1.0.7"
#libc = "0.1.7"
nix = "0.5.0"
